# foldyd

./: meson.build
data/: foldyd.service.in  meson.build
src/: folder-data.vala  folders-watcher.vala  main.vala  meson.build  utils.vala
subprojects/: libfoldy.wrap
